feat: enhance V2Ray integration with improved socket protection and error handling
- Updated LibV2RayBridge to support a protectCallback for managing socket protection via VpnService.
- Modified V2RayCoreManagerImpl to implement the protectCallback, ensuring proper handling of socket file descriptors.
- Improved error messaging for V2Ray core initialization failures in strings.xml for better user guidance.
- Adjusted Tun2SocksRunner and Tun2SocksStub to reflect current connection status and future traffic handling requirements.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,5 @@
     <string name="servers">Servers</string>
     <string name="about">About</string>
     <string name="about_summary">Secure Connect v1.0</string>
-    <string name="vpn_core_not_integrated">موتور VPN (libv2ray + tun2socks) در این نسخهٔ اپ ادغام نشده است. برای اتصال واقعی باید هستهٔ V2Ray را اضافه کنید. راهنما: VPN_INTEGRATION.md</string>
+    <string name="vpn_core_not_integrated">هستهٔ V2Ray راه نیفتاد. مطمئن شوید libv2ray.aar در app/libs است، یک بار Clean و Rebuild بگیرید و دوباره نصب کنید. برای جزئیات: logcat با تگ LibV2RayBridge. راهنما: VPN_INTEGRATION.md</string>
 </resources>
